--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ a {
 
 button {
 	color: #FFF;
-	font-size: 12px;
+	font-size: 16px;
 	letter-spacing: 0.3em;
 	text-transform: uppercase;
 	border-radius: 4px;
@@ -35,7 +35,17 @@ button {
 	background: #990000;
 	padding: 8px 14px;
 }
-
+.back {
+	color: #FFF;
+	font-size: 16px;
+	letter-spacing: 0.3em;
+	text-transform: uppercase;
+	border-radius: 4px;
+	cursor: pointer;
+	border: none;
+	background: #234323;
+	padding: 8px 14px;
+}
 ul.animate {
 	-webkit-transition: -webkit-transform 0.75s cubic-bezier(0.860, 0.000, 0.070, 1.000); 
        -moz-transition: transform 0.75s cubic-bezier(0.860, 0.000, 0.070, 1.000); 
@@ -94,7 +104,7 @@ div.skew > div.wrap {
 
 img {
 	max-width: 1000px;
-	width: 90%;
+	width: 80%;
 	height: auto;
 	display: block;
 	margin: 0 auto;
