--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h1 {
     color: #fff;
     cursor: pointer;
     position: relative;
-    margin: 0.5em 0;
+    margin: 10px 0;
     display: inline-block;
     letter-spacing: 1px;
 }
@@ -411,7 +411,7 @@ input.checkbox:checked:after {
 .anim {
     font-size: 0.85em; 
     letter-spacing: 0px;
-	margin: 2em 0;
+	margin: 0.5em 0;
 } 
 .login-agileits-bottom {
     margin-top: 1.5em;
